# zetanom

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  Makefile  README.md  deny.toml
.github/workflows/: test.yaml
crates/core/: Cargo.toml
crates/core/src/: cli.rs  db.rs  lib.rs  repl.rs  www.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  schema.sql
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/repl/: Cargo.toml
crates/repl/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: basic_unit.rs  date.rs  lib.rs
crates/www/: Cargo.toml
crates/www/src/: config.rs  lib.rs  style.css  ui.rs  www.rs
crates/www/src/routes/: assets.rs  food_edit.rs  food_list.rs  food_new.rs  food_view.rs  log_delete.rs  log_new.rs  log_view.rs  mod.rs  reset.css  root.rs  serving_delete.rs  serving_new.rs  style.css
crates/zetanom/: Cargo.toml
crates/zetanom/src/: main.rs
playground/: 1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  new-food-page.html  new.html
res/: style.css
src/: cli.rs  config.rs  db.rs  error.rs  main.rs  repl.rs  ui.rs  www.rs
src/routes/: assets.rs  food_edit.rs  food_list.rs  food_new.rs  food_view.rs  log_delete.rs  log_new.rs  log_view.rs  root.rs  serving_delete.rs  serving_new.rs
src/types/: basic_unit.rs  date.rs  mod.rs  nutrition.rs
