[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# local
db = { path = "./crates/db" }
error = { path = "./crates/error" }
repl = { path = "./crates/repl" }
www = { path = "./crates/www" }
# external
axum = { version = "0.8.6", features = ["form"] }
clap = { version = "4.5.51", features = ["derive"] }
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled" "chrono"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
