[package]
name = "zetanom"
version = "0.1.0"
edition = "2024"
description = "A diet-tracking app."
homepage = "https://github.com/eudoxia0/zetanom"
repository = "https://github.com/eudoxia0/zetanom"

[dependencies]
axum = { version = "0.8.6", features = ["form"] }
clap = { version = "4.5.51", features = ["derive"] }
chrono = "0.4.42"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
maud = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
