[package]
name = "zetanom"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "A diet-tracking app."
homepage = "https://github.com/eudoxia0/zetanom"
repository = "https://github.com/eudoxia0/zetanom"

categories = ["command-line-utilities"]

[dependencies]
repl.workspace = true
www.workspace = true
tokio.workspace = true
clap.workspace = true
